# Kafka-Product-Service-Example

./: compose.yaml
db-service/: .env  Dockerfile  pyproject.toml
db-service/db_service/: main.py  setting.py  todo.proto  todo_pb2.py
todo_service/: .env  Dockerfile  pyproject.toml
todo_service/todo/: main.py  setting.py  todo.proto  todo_pb2.py
