[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Em-Aar <mmrhaq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.18"
psycopg = {extras = ["binary"], version = "^3.1.19"}
aiokafka = "^0.10.0"
protobuf = "^5.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
